--- a/index.html
+++ b/index.html
@@ -3,31 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secret</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Presente de Aniversário</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #555d4c;
+            color: #ffffff;
+        }
+
+        header {
+            text-align: center;
+            padding: 20px;
+            background-color: #284703;
+            color: white;
+        }
+
+        header h1 {
+            margin: 0;
+        }
+
+        .message {
+            text-align: center;
+            padding: 20px;
+            background-color: #284703;
+            margin: 20px;
+            border-radius: 10px;
+        }
+
+        .message p {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
+            padding: 20px;
+        }
+
+        .gallery img {
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .special-link {
+            text-align: center;
+            margin: 20px;
+        }
+
+        .special-link a {
+            text-decoration: none;
+            padding: 10px 20px;
+            background-color: #284703;
+            color: white;
+            font-size: 18px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .special-link a:hover {
+            background-color: #003003;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Você Conseguiu! Heheheheh</h1>
-        <p>Enigma Resolvido! Eu sei que você é inteligente ia conseguir neném, parabéns.</p>
+        <h1>Pra minha PRINCESA LINDA EHHEHEHE</h1>
+        <p>Desvendou o enigma, aí sim! Feliz Aniversário meu neném!</p>
     </header>
 
-    <!-- Seção de Mensagem -->
-    <section id="message">
-        <h2>Considere o enigma resolvido heheheh </h2>
+    <section class="message">
+        <p>Meu amor, feliz aniversario</p>
         <p>
-            Neném, eu fico encantado com os seus olhos, que brilham mais do que qualquer estrela no céu. Seu cabelo, rapazzz, sempre tão lindo e cheio de vida, é um dos muitos motivos pelos quais sou completamente apaixonado por você hehehhe. E o seu estilo? Ah, nem se fale, é único! Não existe ninguém que tenha tanto charme e personalidade como você. E a sua escolha musical? É como música para a minha alma, perfeitinha do jeitinho que você é. TE AMO MUITO NENEM!
+            Hoje é um dia muitoooo legal, porque foi nesse dia que a mulher da minha vida nasceu (voce)!
+            Você tem os olhos mais lindos que já vi, como se guardassem todo o brilho do universo. 
+            Seu estilo de se vestir é único, cheio de personalidade, e faz você se destacar de um jeito encantador. 
+            O seu gosto musical é incrível, parece que cada música que você gosta tem um pedacinho da sua alma. 
+            E o seu cabelo de 2 cores? Sempre tão lindo e impecavel, é impossível não me apaixonar ainda mais por você. ❤️
         </p>
+        <p>Eu te amo minha princesa linda! nunca se esqueça disso</p>
+        <p>Aí embaixo tem uma playlist que eu fiz pra voce, de todas as musicas que te dedico, você merece! ❤️</p>
     </section>
 
-    <!-- Seção de Galeria de Fotos -->
-    <section id="gallery">
-        <div class="photos-container">
-            <img src="najusantista.jpg" alt="Momento 1" class="photo">
-            <img src="spotify.jpg.jpeg" alt="Momento 3" class="photo">
-            <img src="file.jpg" alt="Momento 2" class="photo">
-        </div>
+    <section class="gallery">
+        <img src="najusantista.jpg" alt="Foto 1">
+        <img src="file.jpg" alt="Foto 2">
+        <img src="moes.jpeg" alt="Foto 3">
+        <img src="princesa.jpeg" alt="Foto 4">
     </section>
 
+    <section class="special-link">
+        <a href="https://open.spotify.com/playlist/1ygw7h6zsMBu64wQGNaiKp?si=1GjdZ5GATWCZGNYxXGy-CA&pt=2f2add56cde8be189368d4f47ac1743b&pi=R-Ch_JIhRnCIV" target="_blank">Playlist aquii</a>
+    </section>
 </body>
 </html>
